--- a/AmphiprionCMS/Web.config
+++ b/AmphiprionCMS/Web.config
@@ -9,8 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-  
-    <add name="amp" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\amphiprion.mdf;Initial Catalog=amphiprion;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <clear />
+    <!--<add name="amp2" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\amphiprion.mdf;Initial Catalog=amphiprion;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="amp" connectionString="Data Source=(local);Initial Catalog=amphiprion3;Integrated Security=True" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <appSettings>
