--- a/AmphiprionCMS/Web.config
+++ b/AmphiprionCMS/Web.config
@@ -22,10 +22,11 @@
 
     <add key="defaultThemeName" value="Default" />
     <add key="defaultLanguage" value="en-US" />
+    <add key="owin:appStartup" value="AmphiprionCMS" />  
   </appSettings>
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5" />  
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
