--- a/AmphiprionCMS/packages.config
+++ b/AmphiprionCMS/packages.config
@@ -8,8 +8,8 @@
   <package id="jQuery" version="2.1.0" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.0.0-alpha1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Owin" version="2.0.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
