--- a/AmphiprionCMS/AmphiprionCMS.csproj
+++ b/AmphiprionCMS/AmphiprionCMS.csproj
@@ -619,6 +619,12 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /q /y /e /i "$(ProjectDir)AmphiprionCMS" "$(SolutionDir)NuGet\AmphiprionCMS"
+xcopy /q /y /e /i "$(ProjectDir)Media" "$(SolutionDir)NuGet\Media"
+xcopy /q /y /e /i "$(ProjectDir)Areas" "$(SolutionDir)NuGet\Areas"
+xcopy /q /y /e /i "$(ProjectDir)Views\AmpPage" "$(SolutionDir)NuGet\Views\AmpPage"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
