--- a/AmphiprionCMS.Components/AmphiprionCMS.Components.csproj
+++ b/AmphiprionCMS.Components/AmphiprionCMS.Components.csproj
@@ -212,7 +212,7 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /y  "$(TargetPath)" "$(SolutionDir)NuGet\bin\$(TargetFileName)"</PostBuildEvent>
+    <PostBuildEvent>copy /y  "$(TargetPath)" "$(SolutionDir)NuGet\lib\$(TargetFileName)"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
