--- a/Amphirprion.Tests/Amphirprion.Tests.csproj
+++ b/Amphirprion.Tests/Amphirprion.Tests.csproj
@@ -79,6 +79,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -94,6 +96,7 @@
     <Compile Include="IntegrationTests\Search\BaseSearchIntegrationTest.cs" />
     <Compile Include="IntegrationTests\Search\IndexingTestFixture.cs" />
     <Compile Include="IntegrationTests\UserTestFixture.cs" />
+    <Compile Include="JSONSerialization.cs" />
     <Compile Include="Pages\PageServiceFixtures.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestBase.cs" />
