--- a/AmphiprionCMS/Web.config
+++ b/AmphiprionCMS/Web.config
@@ -12,6 +12,7 @@
     <clear />
     <!--<add name="amp2" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\amphiprion.mdf;Initial Catalog=amphiprion;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="amp" connectionString="Data Source=(local);Initial Catalog=amphiprion3;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="amp2" connectionString="Data Source=(local);Initial Catalog=ampInstall;Integrated Security=True" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <appSettings>
@@ -22,7 +23,9 @@
 
     <add key="defaultThemeName" value="Default" />
     <add key="defaultLanguage" value="en-US" />
-    <add key="owin:appStartup" value="AmphiprionCMS" />  
+    <add key="owin:appStartup" value="AmphiprionCMS" />
+    <add key="amp:auth:cookieName" value="ampCMS" />
+    <!--<add key="amp:auth:cookieDomain" value="" />-->
   </appSettings>
   <system.web>
     <authentication mode="None" />
