--- a/AmphiprionCMS/AmphiprionCMS.csproj
+++ b/AmphiprionCMS/AmphiprionCMS.csproj
@@ -627,7 +627,7 @@
 xcopy /q /y /e /i "$(ProjectDir)Media" "$(SolutionDir)NuGet\Media"
 xcopy /q /y /e /i "$(ProjectDir)Areas" "$(SolutionDir)NuGet\Areas"
 xcopy /q /y /e /i "$(ProjectDir)Views\AmpPage" "$(SolutionDir)NuGet\Views\AmpPage"
-xcopy /q /y /e /i "$(ProjectDir)Views\AmpPage" "$(SolutionDir)NuGet\Views\AmpSiteSetup"</PostBuildEvent>
+xcopy /q /y /e /i "$(ProjectDir)Views\AmpSiteSetup" "$(SolutionDir)NuGet\Views\AmpSiteSetup"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
