--- a/NuGet/AmphiprionCMS.nuspec
+++ b/NuGet/AmphiprionCMS.nuspec
@@ -15,12 +15,17 @@
             <dependency id="CommonServiceLocator" version="1.2" />
             <dependency id="FluentValidation.MVC5" version="5.1.0.0" />
             <dependency id="Lucene.Net" version="3.0.3" />
-            <dependency id="Microsoft.AspNet.Identity.Owin" version="2.0.1" />
             <dependency id="Microsoft.AspNet.Mvc" version="5.1.1" />
             <dependency id="Microsoft.AspNet.Web.Optimization" version="1.1.3" />
             <dependency id="Microsoft.AspNet.WebApi" version="5.1.1" />
             <dependency id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.1" />
-            <dependency id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" />
+              <dependency id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
+		  <dependency id="Microsoft.Owin.Host.SystemWeb" version="2.1.0"  />
+		  <dependency id="Microsoft.Owin.Security" version="2.1.0"  />
+		  <dependency id="Microsoft.Owin.Security.Cookies" version="2.1.0"/>
+		  <dependency id="Microsoft.Owin.Security.OAuth" version="2.1.0"  />
+		    <dependency id="Microsoft.AspNet.Identity.Core" version="2.1.0"  />
+       <dependency id="Microsoft.AspNet.Identity.Owin" version="2.1.0"/>
             <dependency id="DapperExtensions" version="1.4.3" />
             <dependency id="HtmlAgilityPack" version="1.4.6" />
             <dependency id="RazorEngine" version="3.4.1" />
