--- a/NuGet/AmphiprionCMS.nuspec
+++ b/NuGet/AmphiprionCMS.nuspec
@@ -19,7 +19,7 @@
             <dependency id="Microsoft.AspNet.Web.Optimization" version="1.1.3" />
             <dependency id="Microsoft.AspNet.WebApi" version="5.1.1" />
             <dependency id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.1" />
-              <dependency id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
+              <dependency id="Microsoft.Owin" version="2.1.0" />
 		  <dependency id="Microsoft.Owin.Host.SystemWeb" version="2.1.0"  />
 		  <dependency id="Microsoft.Owin.Security" version="2.1.0"  />
 		  <dependency id="Microsoft.Owin.Security.Cookies" version="2.1.0"/>
