--- a/NuGet/AmphiprionCMS.nuspec
+++ b/NuGet/AmphiprionCMS.nuspec
@@ -12,7 +12,8 @@
         <copyright>Copyright 2014</copyright>
         <tags>CMS</tags>
         <dependencies>
-             <dependency id="CommonServiceLocator" version="1.3" />
+		    <dependency id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.0"  />
+            <dependency id="CommonServiceLocator" version="1.3" />
             <dependency id="DapperExtensions" version="1.4.4" />
             <dependency id="FluentValidation.MVC5" version="5.4.0.0" />
             <dependency id="HtmlAgilityPack" version="1.4.6" />
