--- a/AmphiprionCMS/AmphiprionCMS.csproj
+++ b/AmphiprionCMS/AmphiprionCMS.csproj
@@ -211,6 +211,9 @@
     <Content Include="AmphiprionCMS\Content\iconmoon\demo.html" />
     <Content Include="AmphiprionCMS\Content\iconmoon\fonts\icomoon.svg" />
     <Content Include="AmphiprionCMS\Content\iconmoon\style.css" />
+    <Content Include="AmphiprionCMS\Scripts\jquery-2.1.1.min.js" />
+    <Content Include="AmphiprionCMS\Scripts\jquery.validate.min.js" />
+    <Content Include="AmphiprionCMS\Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="App_Data\amphiprion.mdf" />
     <Content Include="App_Data\amphiprion_log.ldf">
       <DependentUpon>amphiprion.mdf</DependentUpon>
@@ -246,6 +249,9 @@
     <Content Include="Areas\AmpAdministration\Views\Shared\EditorTemplates\String.cshtml" />
     <Content Include="Areas\AmpAdministration\Views\AmpMenu\index.cshtml" />
     <Content Include="App_Data\__amp_settings.cfg" />
+    <Content Include="AmphiprionCMS\Layout\_default.cshtml" />
+    <Content Include="AmphiprionCMS\Layout\Web.config" />
+    <Content Include="AmphiprionCMS\Scripts\jquery-2.1.1.min.map" />
     <None Include="Areas\AmpAdministration\Views\Shared\_LoginPartial.cshtml.k" />
     <Content Include="AmphiprionCMS\Scripts\ckeditor\CHANGES.md" />
     <Content Include="AmphiprionCMS\Scripts\ckeditor\LICENSE.md" />
