--- a/NuGet/AmphiprionCMS.nuspec
+++ b/NuGet/AmphiprionCMS.nuspec
@@ -13,6 +13,7 @@
         <tags>CMS</tags>
         <dependencies>
             <dependency id="CommonServiceLocator" version="1.3" />
+			<dependency id="Newtonsoft.Json" version="6.0.4" />
             <dependency id="DapperExtensions" version="1.4.4" />
             <dependency id="FluentValidation.MVC5" version="5.4.0.0" />
             <dependency id="HtmlAgilityPack" version="1.4.6" />
